--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,17 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "async": "^3.2.4",
     "bootstrap": "^5.1.3",
+    "decode-uri-component": "^0.4.0",
+    "engine.io": "^6.2.1",
+    "loader-utils": "^3.2.1",
+    "minimatch": "^5.1.1",
+    "minimist": "^1.2.7",
+    "node-forge": "^1.3.1",
     "rxjs": "~7.5.0",
+    "socket.io-parser": "^4.2.1",
+    "terser": "^5.16.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
