--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.4",
+    "helmet": "^7.1.0",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
